--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <img src="bottle.jpeg" class="img-responsive">
               </li>
 
-              <h5>Output on <b>Microsoft Azure</b>:-<span></span></h5>
+              <h5>Output on <b>Microsoft Azure</b>:-<span>Bottle</span></h5>
               <h5>Output on <b>MobileNet</b>:-<span></span></h5>
 
               <div class="mini_result">
@@ -44,7 +44,7 @@
                 <img src="shoes.jpeg" class="img-responsive">
             </li>
 
-            <h5>Output on <b>Microsoft Azure</b>:-<span></span></h5>
+            <h5>Output on <b>Microsoft Azure</b>:-<span>Shoe</span></h5>
             <h5>Output on <b>MobileNet</b>:-<span></span></h5>
 
             <div class="mini_result">
@@ -60,7 +60,7 @@
                 <img src="dumbbell.jpeg" class="img-responsive">
             </li>
 
-            <h5>Output on <b>Microsoft Azure</b>:-<span></span></h5>
+            <h5>Output on <b>Microsoft Azure</b>:-<span>Dumbbell</span></h5>
             <h5>Output on <b>MobileNet</b>:-<span></span></h5>
 
             <div class="mini_result">
@@ -76,7 +76,7 @@
                 <img src="bird.jpeg" class="img-responsive">
             </li>
 
-            <h5>Output on <b>Microsoft Azure</b>:-<span></span></h5>
+            <h5>Output on <b>Microsoft Azure</b>:-<span>Bird</span></h5>
             <h5>Output on <b>MobileNet</b>:-<span></span></h5>
 
             <div class="mini_result">
@@ -92,7 +92,7 @@
                 <img src="bed.jpeg" class="img-responsive">
             </li>
 
-            <h5>Output on <b>Microsoft Azure</b>:-<span></span></h5>
+            <h5>Output on <b>Microsoft Azure</b>:-<span>Infant bed</span></h5>
             <h5>Output on <b>MobileNet</b>:-<span></span></h5>
 
             <div class="mini_result">
