--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
               </li>
 
               <h5>Output on <b>Microsoft Azure</b>:-<span>Bottle</span></h5>
-              <h5>Output on <b>MobileNet</b>:-<span></span></h5>
+              <h5>Output on <b>MobileNet</b>:-<span>Water Bottle</span></h5>
 
               <div class="mini_result">
                   <h4>Result:</h4>
-                  <h4> </h4>
+                  <h4>MobileNet Model is more accurate </h4>
               </div>
           </div>
           <br><br>
@@ -45,11 +45,11 @@
             </li>
 
             <h5>Output on <b>Microsoft Azure</b>:-<span>Shoe</span></h5>
-            <h5>Output on <b>MobileNet</b>:-<span></span></h5>
+            <h5>Output on <b>MobileNet</b>:-<span>Running shoes</span></h5>
 
             <div class="mini_result">
                 <h4>Result:</h4>
-                <h4> </h4>
+                <h4>MobileNet Model is more accurate </h4>
             </div>
         </div>
         <br><br>
@@ -61,11 +61,11 @@
             </li>
 
             <h5>Output on <b>Microsoft Azure</b>:-<span>Dumbbell</span></h5>
-            <h5>Output on <b>MobileNet</b>:-<span></span></h5>
+            <h5>Output on <b>MobileNet</b>:-<span>Mike, Microphone</span></h5>
 
             <div class="mini_result">
                 <h4>Result:</h4>
-                <h4> </h4>
+                <h4>MobileNet Model is more accurate </h4>
             </div>
         </div>
         <br><br>
@@ -77,11 +77,11 @@
             </li>
 
             <h5>Output on <b>Microsoft Azure</b>:-<span>Bird</span></h5>
-            <h5>Output on <b>MobileNet</b>:-<span></span></h5>
+            <h5>Output on <b>MobileNet</b>:-<span>Skiing Mask</span></h5>
 
             <div class="mini_result">
                 <h4>Result:</h4>
-                <h4> </h4>
+                <h4>Microsoft Azure is more accurate </h4>
             </div>
         </div>
         <br><br>
@@ -93,12 +93,17 @@
             </li>
 
             <h5>Output on <b>Microsoft Azure</b>:-<span>Infant bed</span></h5>
-            <h5>Output on <b>MobileNet</b>:-<span></span></h5>
+            <h5>Output on <b>MobileNet</b>:-<span>Bathtub</span></h5>
 
             <div class="mini_result">
                 <h4>Result:</h4>
-                <h4> </h4>
+                <h4>Microsoft Azure is more accurate </h4>
             </div>
         </div>
       </ol>
+      <p>5 images were tested here.
+          MobileNet's score was 3/5,
+          while Microsoft Azure's score was 2/5.
+          So according to the results MobileNet is more accurate.
+      </p>
   </body>
